compiler/testData/diagnostics/tests/dataClasses/dataClassNoName.fir.kt
// See EA-73584
data class<!SYNTAX!><!> {

}

// See KT-9296
data interface<!SYNTAX!><!> {

}